fix: 6-2. Font for collapsed nav: top level font still has 18px font-size

--- a/assets/themes/zeppelin/css/style.css
+++ b/assets/themes/zeppelin/css/style.css
@@ -1150,7 +1150,7 @@ and (max-width: 996px) {
 
   .navbar-inverse .navbar-nav > li > a {
     margin-left: -12px;
-    font-size: 18px;
+    font-size: 15px;
   }
 }
 
